--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,18 +1,79 @@
 //====================================================================================================
+.header {
+
+	// .header__top
+	&__top {
+		background-color: $mainDarkColor;
+		color: #fff;
+	}
+
+
+	// .header__body
+	&__body {}
+}
+
+.top-header {
+	padding: rem(10) 0;
+
+	// .top-header__container
+	&__container {
+		display: flex;
+		align-items: center;
+		gap: rem(20); // отступ безопасности, чтоб не слиплись элементы
+		min-height: rem(50);
+	}
+
+	// .top-header__menu
+	&__menu {
+		flex: 1 1 auto; // расшипяет на всю ширину
+	}
+
+	// .top-header__user
+	&__user {
+		display: inline-flex;
+		align-items: center;
+		font-weight: 600;
+		line-height: math.div(22, 18);
+
+		&::before {
+			font-size: rem(28);
+			margin-right: em(15, 28);
+		}
+	}
+}
+
+.menu {
+
+	// .menu__list
+	&__list {
+		display: flex;
+		flex-wrap: wrap;
+		row-gap: 5px;
+		@include adaptiveValue("column-gap", 60, 20);
+	}
+
+	// .menu__link
+	&__link {
+		font-size: rem(16);
+		line-height: math.div(20, 16);
+	}
+}
 
 //====================================================================================================
 
 //Burger
-/*
+
 .icon-menu {
 	display: none;
+
 	@media (max-width: $mobile) {
 		display: block;
 		position: relative;
-		width: rem(30);
+		flex: 0 0 rem(30);
 		height: rem(18);
 		cursor: pointer;
 		z-index: 5;
+
 		span,
 		&::before,
 		&::after {
@@ -22,28 +83,34 @@
 			position: absolute;
 			width: 100%;
 			height: rem(2);
-			background-color: #000;
+			background-color: #fff;
 		}
+
 		&::before {
 			top: 0;
 		}
+
 		&::after {
 			bottom: 0;
 		}
+
 		span {
 			top: calc(50% - rem(1));
 		}
+
 		.menu-open & {
 			span {
 				width: 0;
 			}
+
 			&::before,
-			&::after {
-			}
+			&::after {}
+
 			&::before {
 				top: calc(50% - rem(1));
 				transform: rotate(-45deg);
 			}
+
 			&::after {
 				bottom: calc(50% - rem(1));
 				transform: rotate(45deg);
@@ -51,4 +118,218 @@
 		}
 	}
 }
-*/
+
+//====================================================================================================
+
+
+.body-header {
+	padding: rem(10) 0;
+	background-color: #ECF1F2;
+
+	// .body-header__container
+	&__container {
+		display: flex;
+		align-items: center;
+		min-height: rem(70);
+	}
+
+	// .body-header__logo
+	&__logo {
+		@extend %ic;
+		@extend ._icon-logo;
+		font-size: rem(42);
+		color: $mainDarkColor;
+	}
+
+	// .body-header__search
+	&__search {
+		flex: 1 1 auto;
+		padding-right: rem(20);
+		@include adaptiveValue("margin-left", 158, 20);
+	}
+
+	// .body-header__actions
+	&__actions {}
+}
+
+.search-header {
+	background-color: rgba(7, 7, 7, 0.03);
+	border: rem(1) solid rgba(4, 4, 4, 0.5);
+	position: relative;
+	border-radius: rem(3);
+	max-width: rem(377);
+
+	// .search-header__button
+	&__button {
+		position: absolute;
+		top: 0;
+		left: rem(8);
+		height: rem(41);
+		width: rem(41);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: transparent;
+		color: rgba(0, 0, 0, 0.5);
+		font-size: rem(14);
+	}
+
+	// .search-header__input
+	&__input {
+		width: 100%;
+		height: rem(41);
+		background-color: transparent;
+		padding: 0px rem(20) 0px rem(50);
+		color: $mainColor;
+
+		&::placeholder {
+			color: rgba(0, 0, 0, 0.5);
+		}
+	}
+}
+
+//====================================================================================================
+
+.actions-header {
+	display: flex;
+	align-items: center;
+	column-gap: rem(30);
+
+	// .actions-header__lacation
+	&__lacation {
+		display: inline-flex;
+		align-items: center;
+		font-weight: 600;
+		margin: 0px rem(25) 0px 0px;
+
+		&::before {
+			font-size: rem(24);
+			color: #000;
+			margin: 0px em(10, 24) 0px 0px;
+		}
+	}
+
+	// .actions-header__phones
+	&__phones {}
+
+	// .actions-header__favorite
+	&__favorite {
+		font-size: rem(27);
+	}
+
+	// .actions-header__cart
+	&__cart {
+		flex: 0 0 auto;
+
+	}
+}
+
+.phones-header {
+
+	// .phones-header__items
+	&__items {}
+
+	// .phones-header__item
+	&__item {
+		position: relative;
+		display: flex;
+	}
+
+	// .phones-header__phone
+	&__phone {
+		font-weight: 600;
+		line-height: math.div(22, 18);
+		white-space: nowrap;
+	}
+
+	// .phones-header__arrow
+	&__arrow {
+		color: $mainOrange;
+		font-size: rem(10);
+		margin: rem(0) rem(0) rem(0) em(17, 10);
+
+		&._spoller-active {
+			transform: rotate(-180deg);
+		}
+	}
+
+	// .phones-header__list
+	&__list {
+		position: absolute;
+		top: 100%;
+		left: 0;
+		width: 100%;
+		background-color: #fff;
+		padding: rem(15);
+		border-radius: rem(10);
+		margin: rem(5) rem(0) rem(0) rem(0);
+		box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+
+		li {
+			&:not(:last-child) {
+				margin-bottom: em(8, 18);
+			}
+		}
+	}
+
+	// .phones-header__callback
+	&__callback {
+		margin: rem(3) rem(0) rem(0) rem(0);
+		color: $mainOrange;
+		font-weight: 700;
+		line-height: math.div(22, 18);
+	}
+}
+
+.cart-header {
+
+	display: flex;
+	align-items: center;
+	column-gap: rem(15);
+
+	// .cart-header__icon
+	&__icon {
+		flex: 0 0 rem(37);
+		font-size: rem(35);
+		position: relative;
+
+		span {
+			position: absolute;
+			top: 0;
+			right: 0;
+			width: rem(14);
+			height: rem(14);
+			color: #fff;
+			border-radius: 50%;
+			background-color: $mainOrange;
+			font-size: rem(7);
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+	}
+
+	// .cart-header__body
+	&__body {
+		font-size: rem(16);
+		line-height: math.div(20, 16);
+		flex: 0 0 auto;
+	}
+
+	// .cart-header__summ
+	&__summ {
+		font-weight: 500;
+
+		&:not(:last-child) {
+			margin-bottom: em(5, 16);
+		}
+	}
+
+	// .cart-header__link
+	&__link {
+		color: $mainOrange;
+
+	}
+}
+
+//====================================================================================================
