--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,8 @@ $fontSize: rem(18); // где 14(px) - размер шрифта по умолч
 
 // Основные цвета
 $mainColor: #000; // Цвет шрифта по умолчанию
+$mainDarkColor: #141414;
+$mainOrange: #E8AA31;
 
 // Настройки адаптивной сетки ===============================================================================================================================================================================================================================================================================================
 
